Add deployment configuration files and guides

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,37 @@
 {
-  "name": "backend",
+  "name": "igdtuw-eduhub-backend",
   "version": "1.0.0",
+  "description": "Backend for IGDTUW EDUHub",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate deploy",
+    "prisma:seed": "node prisma/seed.js",
+    "build": "prisma generate && prisma migrate deploy"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
+  "keywords": [
+    "education",
+    "resources",
+    "igdtuw"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^5.19.1",
-    "bcryptjs": "^3.0.3",
+    "@prisma/client": "^5.22.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "googleapis": "^140.0.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4",
-    "prisma": "^5.19.1"
+    "nodemon": "^3.1.7",
+    "prisma": "^5.22.0"
   }
 }
