Fix Dockerfile for Render deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,16 @@
-FROM node:18-alpine
+FROM node:18-slim
 
 WORKDIR /app
 
+# Install build tools needed for native modules (e.g., prisma)
+RUN apt-get update && apt-get install -y --no-install-recommends python3 make g++ && rm -rf /var/lib/apt/lists/*
+
 COPY package*.json ./
-RUN npm install
+RUN npm install --production
 
 COPY . .
 
+# Generate Prisma client
 RUN npx prisma generate
 
 EXPOSE 5000
