--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://neondb_owner:npg_x3k0iboVhXeg@ep-frosty-silence-af3nxjwe-pooler.c-2.us-west-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
 PORT=5000
 NODE_ENV=production
