Update render.yaml with PostgreSQL connection

--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
     startCommand: npm start
     envVars:
       - key: DATABASE_URL
-        value: file:./dev.db
+        value: postgresql://neondb_owner:npg_x3k0iboVhXeg@ep-frosty-silence-af3nxjwe-pooler.c-2.us-west-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
       - key: JWT_SECRET
         generateValue: true
       - key: NODE_ENV
